[project]
authors = [
  {name = "Matthew Martinez", email = "mpmartinez896@gmail.com"},
]
dependencies = [
  "polars>=1.24.0",
]
description = "Cryo-ET automated data processing pipeline, implemented as a Python package"
name = "sanofi-cryoet"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
sanofi-cryoet = "sanofi_cryoet:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
package = true
